--- a/views/includes/elements/product.ejs
+++ b/views/includes/elements/product.ejs
@@ -1,4 +1,4 @@
-<a href="/products/:<%=p._id%>" class="productLink">
+<a href="/product/<%=p._id%>" class="productLink">
     <section class="productInfo">
         <div class="productImageContainer">
             <img src="/images/<%=p.type%>/<%=p.imageUrl%>" alt="<%=p.name%>" class="productImage">
@@ -7,7 +7,6 @@
             <p class="productBrand"><%=p.brand%></p>
             <p class="productName"><%=p.name%></p>
             <p class="productPrice"><%=p.price%> <span class="currency">SEK</span></p>
-        </div>
-        
+        </div>        
     </section>
 </a>
