can upload an array of images, changed a bunch of files

--- a/views/adminViews/addProduct.ejs
+++ b/views/adminViews/addProduct.ejs
@@ -36,8 +36,8 @@
         </section>
 
         <section class="fieldContainer imageSelector" >
-            <label for="imageUrl" class="formLabel">Image name</label>
-            <input type="text" name="imageUrl" id="imageUrl" class="formInput" required >
+            <label for="imageUrl" class="formLabel">Image names <span class="note">(a coma separated list of image-names)</span></label>
+            <input type="text" name="imageUrls" id="imageUrls" class="formInput" required >
         </section>
         
         <div class="centerFlex">
