--- a/views/adminViews/adminElements/product.ejs
+++ b/views/adminViews/adminElements/product.ejs
@@ -1,7 +1,7 @@
 <div class="productLink">
     <section class="productInfo productInfo-admin">
         <div class="productImageContainer">
-            <img src="/images/<%=p.type%>/<%=p.imageUrl%>" alt="<%=p.name%>" class="productImage">
+            <img src="/images/<%=p.type%>/<%=p.imageUrls[0]%>" alt="<%=p.name%>" class="productImage">
         </div>
         <div>
             <p class="productBrand"><%=p.brand%></p>
