--- a/views/includes/elements/product.ejs
+++ b/views/includes/elements/product.ejs
@@ -1,7 +1,7 @@
 <a href="/product/<%=p._id%>" class="productLink">
     <section class="productInfo">
         <div class="productImageContainer">
-            <img src="/images/<%=p.type%>/<%=p.imageUrl%>" alt="<%=p.name%>" class="productImage">
+            <img src="/images/<%=p.type%>/<%=p.imageUrls[0]%>" alt="<%=p.name%>" class="productImage">
         </div>
         <div>
             <p class="productBrand"><%=p.brand%></p>
