--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -5,6 +5,9 @@
 <body>
     <%- include('./includes/topNav') %>
     <h1 class="pageTitle">Sign up</h1>
+    <% if(locals.alreadExists) {%>
+        <h2 class="pageTitle warning">This email is already registered with us.</h2>
+    <%}%>
     <form action="" method="post" class="userLoginForm">
         <section class="fieldContainer">
             <label for="userEmail" class="formLabel">E-mail</label>
