log in page have a message for wrong user name

--- a/views/includes/topBar.ejs
+++ b/views/includes/topBar.ejs
@@ -14,7 +14,7 @@
 
         <div class="userAuthentication topBarComponent" >
             <a href="/users"><p class="topBarImage userLogo"><i class="far fa-user"></i></p></a>
-            <a href="/users/login" class="authentication-msg">Log in</a> 
+            <a href="/login" class="authentication-msg">Log in</a> 
         </div>
 
         <div class="cartContainer topBarComponent">
