--- a/public/css/login.css
+++ b/public/css/login.css
@@ -65,6 +65,9 @@
     text-align: center;
     color: var(--creamy-purple);
 }
+.errorMsg {
+    color: red;
+}
 
 @media only screen and (min-width: 880px) {
     .userLoginForm {
