--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -1,8 +1,11 @@
 <%- include('./includes/start.ejs') %>
+<link rel="stylesheet" href="/css/login.css">
 </head>
 <body>
     <%- include('./includes/topNav') %>
-    <h1>Welcome</h1>
+    <h1 class="pageTitle">Welcome to your profile</h1>
+
+    <h5 class="pageTitle warning">Which is yet to be implemented</h5>
 
     <%- include('./includes/footer') %>
 </body>
