--- a/public/css/login.css
+++ b/public/css/login.css
@@ -65,8 +65,11 @@
     text-align: center;
     color: var(--creamy-purple);
 }
-.errorMsg {
+.errorMsg,
+.warning {
     color: red;
+    text-align: center;
+    text-transform: capitalize;
 }
 
 @media only screen and (min-width: 880px) {
