node version mentioned in package.json

--- a/views/includes/topBar.ejs
+++ b/views/includes/topBar.ejs
@@ -4,6 +4,7 @@
     </div>
 
     <div class="leftSide">
+        <a href='/admin'>Admin</a>
         <label for="chkSearchBoxTrigger" class="searchBoxTriggerLabel topBarComponent"><p class="searchBoxTrigger"><i class="fas fa-search"></i></p></label>        
         <input type="checkbox" name="" id="chkSearchBoxTrigger">
        
